--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-title:            Balzac
-tagline:          A beautiful theme.
-description:      Describe your website.
+title:            Design Metrics
+tagline:          A space for resources and conversation.
+description:      This would describe the website if I was feeling clever.
 #Comment out url when working locally to resolve base urls correctly
-url: http://jekyll.gtat.me
+url: http://metricdesign.github.io
 
 # Owner/author information
 owner:
-  name:           Cole Townsend
+  name:           Balanced Team community
   avatar:         avatar.png
   bio:            "Aesthete & Athlete"
   email:          cole@coletownsend.com
