--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ links:
   - title: About
     url: /about
   - title: Github
-    url: https://github.com/ColeTownsend/Balzac-for-Jekyll
+    url: https://github.com/designmetrics
     external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
