--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: http://designmetrics.github.io
 owner:
   name:           Balanced Team community
   avatar:         avatar.png
-  email:          alexa@klugeinteractive.com
+  email:          alexa.mariel@gmail.com
   twitter:        balancedteam      
   github:         designmetrics       
   disqus:         designmetrics
